--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Xunaed Al Imdad's Personal Site</title>
 
     <link rel="stylesheet" href="styles.css">
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <link rel="icon" href="favicon.ico">
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/d2b8cf51a1.js" crossorigin="anonymous"></script>
